# geo-datasets

./: README.md  dev.py  main.py  pyproject.toml
assets/cities/: cities.py
assets/countries/: countries.py
assets/country_borders/: country_borders.py
assets/organizations/: organizations.py
assets/regions/: regions.py
assets/us_states/: us_states.py
data/geo-datasets/snapshots/: debug-null-column.json
data/geo-datasets/us_states/: local-dev.parquet
data/geographic-reference/cities/: local-116.parquet
data/geographic-reference/countries/: local-116.parquet
data/geographic-reference/debug/: logs.db
data/geographic-reference/regions/: local-116.parquet
data/geographic-reference/snapshots/: local-116.json
